Stack colums on mobile, fix mobile header bug

--- a/src/components/layout/container.module.css
+++ b/src/components/layout/container.module.css
@@ -28,4 +28,8 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-column-gap: 2em;
+
+  @media (max-width: 750px) {
+    grid-template-columns: 100%;
+  }
 }
